client/src/app/globals.css
@import "@radix-ui/colors/black-alpha.css";
@import "@radix-ui/colors/mauve.css";
@import "@radix-ui/colors/violet.css";
@import "@radix-ui/colors/gray.css";
@import "@radix-ui/colors/gray-dark.css";
@import "@radix-ui/colors/blue.css";
@import "@radix-ui/colors/iris.css";
@import "@radix-ui/colors/iris-dark.css";
@import "@radix-ui/colors/red.css";
@import "@radix-ui/colors/ruby.css";
@import "@radix-ui/colors/cyan.css";
@import "@radix-ui/colors/green.css";
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
  --background-admin-menu: ;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

#modal-root {
  /* Adjust width and height as needed */
}
.MuiPagination-text {
  color: #ccc;
}
.slider-thumb::-webkit-slider-thumb {
  appearance: none;
  width: 25px;
  height: 25px;
  background: white;
  cursor: pointer;
  border-radius: 50%;
  border: none;
  pointer-events: auto;
}

.slider-thumb::-moz-range-thumb {
  width: 25px;
  height: 25px;
  background: white;
  cursor: pointer;
  border-radius: 50%;
  border: none;
}
@layer utilities {
  .css-invert {
    @apply invert-[50%] brightness-200;
  }
  .heading {
    @apply uppercase text-cyan-300 relative text-center text-[13px] before:content-[''] before:absolute before:right-0  before:-top-0 before:to-cyan-300/50 before:bg-gradient-to-l before:from-cyan-300/10  before:w-[50px] before:h-[3px] before:rounded-2xl tracking-wide;
  }
  .headingAdmin {
    @apply relative before:content-[""] before:absolute before:-left-3 ml-2 before:top-[50%] before:-translate-y-1/2 before:h-[1rem] before:w-[0.2rem] before:bg-gradient-to-b before:from-[rgba(132,90,223,0.5)] before:to-[rgba(35,183,229,0.5)] before:rounded-[0.5rem];
  }
  .input-auth {
    @apply w-full border dark:border-white dark:text-white text-black border-black rounded-md;
  }
  .button-auth {
    @apply box-border w-full text-white  shadow-blackA4 hover:bg-blue10 inline-flex h-[40px] items-center justify-center rounded-[4px] bg-blue9 px-[15px]  font-medium leading-none shadow-[0_2px_10px] focus:shadow-[0_0_0_2px] focus:shadow-black focus:outline-none mt-[30px];
  }
  .input-profile {
    @apply w-full border dark:border-white border-black h-[40px] text-black dark:text-white px-4 bg-transparent;
  }
}

.ScrollAreaRoot {
  border-radius: 4px;
  overflow: hidden;
  box-shadow: 0 2px 10px var(--black-a7);
  background-color: transparent;
  --scrollbar-size: 5px;
  background-color: white;
}

.ScrollAreaViewport {
  width: 100%;
  height: 100%;
  border-radius: inherit;
}

.ScrollAreaScrollbar {
  display: flex;
  /* ensures no selection */
  user-select: none;
  /* disable browser handling of all panning and zooming gestures on touch devices */
  touch-action: none;
  padding: 2px;
  background: var(--black-a6);
  transition: background 160ms ease-out;
}
.ScrollAreaScrollbar:hover {
  background: var(--black-a8);
}
.ScrollAreaScrollbar[data-orientation="vertical"] {
  width: var(--scrollbar-size);
}
.ScrollAreaScrollbar[data-orientation="horizontal"] {
  flex-direction: column;
  height: var(--scrollbar-size);
}

.ScrollAreaThumb {
  flex: 1;
  background: var(--mauve-10);
  border-radius: var(--scrollbar-size);
  position: relative;
}
/* increase target size for touch devices https://www.w3.org/WAI/WCAG21/Understanding/target-size.html */
.ScrollAreaThumb::before {
  content: "";
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  height: 100%;
  min-width: 44px;
  min-height: 44px;
}

.ScrollAreaCorner {
  background: var(--black-a8);
}

.Text {
  color: var(--violet-11);
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
}

.Tag {
  color: var(--mauve-12);
  font-size: 13px;
  line-height: 18px;
  margin-top: 10px;
  border-top: 1px solid var(--mauve-6);
  padding-top: 10px;
}

@keyframes changeBackgroundColor {
  0%,
  100% {
    opacity: 1;
  }
  16.67% {
    opacity: 0.9;
  }
  33.33% {
    opacity: 0.8;
  }
  50% {
    opacity: 0.6;
  }
  66.67% {
    opacity: 0.5;
  }
  83.33% {
    opacity: 0.4;
  }
}
body {
  color: rgb(var(--foreground-rgb));
  font-family: "Poppins", Arial, Helvetica, sans-serif;
}
.hero_animation {
  background-image: linear-gradient(
    147.92deg,
    rgba(44, 47, 226, 0.456) 10.41%,
    hsla(0, 0%, 100%, 0) 89.25%
  );
  animation: changeBackgroundColor 4s 1s infinite linear forwards;
}

@keyframes shake {
  0% {
    transform: translateX(0);
  }
  20% {
    transform: translateX(-2px);
  }
  40% {
    transform: translateX(2px);
  }
  60% {
    transform: translateX(-2px);
  }
  80% {
    transform: translateX(2px);
  }
  100% {
    transform: translateX(0px);
  }
}
.snake {
  animation: shake 0.5s ease-in-out;
}

#payment-form {
  border-radius: var(--radius);
  padding: 20px;
  margin: 20px 0;

  z-index: 50;
  color: white;
}
.p-FieldLabel {
  color: white;
}
.circular-progress {
  width: 100px;
  height: 100px;
  border-radius: 50%;
  background: conic-gradient(from 0deg, #ffffff 0%, #ff00ff 50%, #ffffff 100%);
}
#messages {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New";
  display: none; /* hide initially, then show once the first message arrives */
  background-color: #0a253c;
  color: #00d924;
  padding: 20px;
  margin: 20px 0;
  border-radius: 3px;
  font-size: 0.7em;
}
#payment-form button {
  background-color: #635bff;
}

#payment-form button {
  background: #635bff;
  border-radius: 3px;
  border: 0;
  padding: 12px 16px;
  margin-top: 16px;
  font-weight: 600;
  cursor: pointer;
  transition: all 0.2s ease;
  display: block;
}
#payment-form button:hover {
  filter: contrast(115%);
}
#payment-form button:active {
  transform: translateY(0px) scale(0.98);
  filter: brightness(0.9);
}
#payment-form button:disabled {
  opacity: 0.5;
  cursor: none;
}
#payment-form label {
  color: white !important;
}
input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type="number"] {
  -moz-appearance: textfield;
}

.pageHeader {
  view-transition-name: page-header;
}

/* Animate the page content separatly */
.pageContent {
  view-transition-name: page-content;
}

::view-transition-old(root) {
  animation: fade-and-scale-out 0.5s ease-in-out 1 forwards;
}

::view-transition-new(root) {
  animation: fade-and-scale-in 1s ease-in-out 1 forwards;
}

/* ::view-transition-old(page-header) {
  animation: hide 1s ease-in-out 1 forwards;
} */

::view-transition-new(page-header) {
  animation: slide-right 2s ease-in-out 1 forwards;
}

/* ::view-transition-old(page-content) {
  animation: hide 1s ease-in-out 1 forwards;
} */

::view-transition-new(page-content) {
  animation: slide-left 2.5s ease-in-out 1 forwards;
}

/* First Animation */

@keyframes fade-and-scale-in {
  from {
    opacity: 0.5;
  }

  to {
    opacity: 1;
  }
}

@keyframes fade-and-scale-out {
  from {
    opacity: 1;
  }

  to {
    opacity: 0.5;
  }
}

/* Second Animation */

@keyframes hide {
  from {
    opacity: 1;
  }

  to {
    opacity: 0;
  }
}

@keyframes slide-left {
  from {
    opacity: 0;
    transform: translateX(-100%);
  }

  to {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes slide-right {
  from {
    opacity: 0;
    transform: translateX(100%);
  }

  to {
    opacity: 1;
    transform: translateX(0);
  }
}
.css-z5rm24 {
  background-color: transparent !important;
}
.ps-menuitem-root.ps-active {
  background-color: #5178fd7c;
}
.ps-menuitem-root.menu-dark.ps-active {
  background-color: #304384;
}

.progress-bar-striped {
  background-image: linear-gradient(
    45deg,
    rgba(255, 255, 255, 0.15) 25%,
    transparent 25%,
    transparent 50%,
    rgba(255, 255, 255, 0.15) 50%,
    rgba(255, 255, 255, 0.15) 75%,
    transparent 75%,
    transparent
  );
  background-size: 1rem 1rem;
}

.card {
  background: #333;
  border-radius: 0.5rem;
  padding: 1rem;
  color: white;
}

.trend-icon {
  color: #10b981; /* Tailwind green-500 */
}

.trend-icon.down {
  color: #f87171; /* Tailwind red-500 */
}

